<resources>
    <string name="app_name">Firestore</string>
    <string name="surname">Surname</string>
    <string name="name">name</string>
    <string name="age">age</string>
    <string name="save_database">Save Database</string>
    <string name="retrieve_database">Retrieve Data</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="new_first_name">New First Name</string>
    <string name="new_last_name">New Last Name</string>
    <string name="new_age">New Age</string>
    <string name="save_to_database">Save to database</string>
    <string name="update_person">Update Person</string>
</resources>