<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/etNewFirstName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/etNewLastName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/age"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/etNewAge"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname" />

    <EditText
        android:id="@+id/etNewFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNewLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/new_last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/surname"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/etNewAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/new_age"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/age"
        app:layout_constraintTop_toBottomOf="@+id/surname" />


    <Button
        android:id="@+id/saveData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save_database"
        app:layout_constraintEnd_toStartOf="@+id/btnUpdatePerson"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <Button
        android:id="@+id/retrieveData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/retrieve_database"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveData" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to">

        <TextView
            android:id="@+id/personTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PERSON DATA"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </ScrollView>


    <EditText
        android:id="@+id/from"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="From"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/to"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retrieveData" />

    <EditText
        android:id="@+id/to"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="To"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/from"
        app:layout_constraintTop_toBottomOf="@+id/retrieveData" />

    <Button
        android:id="@+id/btnUpdatePerson"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/update_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/saveData"
        app:layout_constraintTop_toBottomOf="@+id/age" />

</androidx.constraintlayout.widget.ConstraintLayout>